cleaned up flex properties and added js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="./Assets/Images/code_header.jpg" alt="dark coding elements on computer screen" width="95%" height="90%">
         <div class="text-block">
             <H1>Coding Skills Quiz</H1>
-            <p>Test your knowledge of Javascript against the clock and your peers!</p>
+            <h3>Test your knowledge of Javascript against the clock and your peers!</h3>
         </div>
     </div>
 
@@ -21,7 +21,7 @@
             <h2 id="question">Question goes here </h2>
             <div id="answer-buttons"></div>
             <button class="btn"> Answer 1 </button>
-            <button class="btn"> Answer 2</button>
+            <button class="btn"> Answer 2 </button>
             <button class="btn"> Answer 3 </button>
         </div>
             <button id="next-btn">Next Question</button>
@@ -29,10 +29,7 @@
             
         </div>
     </div>
-    <div class="card">
-        <h2>Display Results:</h2>
-        <p id="results"></p>
-    </div>
+    
     <div class="card">
         <h2>Timer: </h2>
         <p id="timer"></p>
