formatting, added timer, additional js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     
     <div class="card">
         <h2>Timer: </h2>
-        <p id="timer"></p>
+    
+        <h3 class="time" style="text-align: center;"></h3>
+        <div id="main"></div>
     </div>
     <script src="script.js"></script>
 </body>
