timer working, still needs cleanup

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     
     <div class="card">
         <h2>Timer: </h2>
-    
-        <h3 class="time" style="text-align: center;"></h3>
-        <div id="main"></div>
+        <p id="countdown"></p>
     </div>
     <script src="script.js"></script>
 </body>
