added save score and initals input and start local storage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <div class="container">
-        <img src="./Assets/Images/code_header.jpg" alt="dark coding elements on computer screen" width="95%" height="90%">
+        <img src="./Assets/Images/code_header.jpg" alt="dark coding elements on computer screen" width="95%"
+            height="90%">
         <div class="text-block">
             <H1>Coding Skills Quiz</H1>
             <h3>Test your knowledge of Javascript against the clock and your peers!</h3>
@@ -20,19 +21,17 @@
         <div class="quiz">
             <h2 id="question">Question goes here </h2>
             <div id="answer-buttons"></div>
-            <button class="btn"> Answer 1 </button>
-            <button class="btn"> Answer 2 </button>
-            <button class="btn"> Answer 3 </button>
+            <p id="highScores">Save your score! </p>
+            <input type="text" id="initials" placeholder="Enter your initials here" />
         </div>
-            <button id="next-btn">Next Question</button> 
-        </div>
+        <button id="next-btn">Next Question</button>
     </div>
-    
-    <div class="card">
-        <h2>Timer: </h2>
-        <p id="countdown"></p>
+    <div class=" card">
+            <h2>Timer: </h2>
+            <p id="countdown"></p>
+            <script src="script.js"></script>
     </div>
-    <script src="script.js"></script>
+
 </body>
 
 </html>
