progress on local storage. still not working

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             <div id="answer-buttons"></div>
             <p id="highScores">Save your score! </p>
             <input type="text" id="initials" placeholder="Enter your initials here" />
+            <button id="saveBtn">Save</button>
         </div>
         <button id="next-btn">Next Question</button>
     </div>
     <div class=" card">
-            <h2>Timer: </h2>
-            <p id="countdown"></p>
-            <script src="script.js"></script>
+        <h2>Timer: </h2>
+        <p id="countdown"></p>
+        <script src="script.js"></script>
     </div>
 
 </body>
