timer closer to working correctly. LS still not working

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <p id="highScores">Save your score! </p>
             <input type="text" id="initials" placeholder="Enter your initials here" />
             <button id="saveBtn">Save</button>
+            <h2 id="savedHighScores">High Scores</h2>
+            <ol id="savedScores"></ol>
         </div>
         <button id="next-btn">Next Question</button>
     </div>
